# projektgamma

./: .gitignore  CMakeLists.txt  Ganttchart Projektgamma.xlsx  Readme.md
UI/: anmelden.ui  ein_auszahlen.ui  registrieren.ui  stockx.ui
examples/: demo_qt_1.cpp  demo_stockmarket.cpp
extra/: client.py  demo_pybind11.py  demo_qt_1.py  demo_qt_2.py  demo_qt_3.py  server.json  server.py
extra/UIPythonFiles/: ui_anmelden.py  ui_ein_auszahlen.py  ui_registrieren.py  ui_stockx.py
src/: serverlogik.cpp
